Updating the Makefile
* Creating branch and cleaning up
* Updating Makefile
* Removed invalid commands
* Undoing some changes that were in the wrong branch
* More Makefile updates
* Adding symbolic links

--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -1,6 +1,6 @@
-############# 
-# Compiler 
-############# 
+#############
+# Compiler
+#############
 
 ## The Intel(R) fortran compiler (ifort)
 #ifeq ($(DEBUG),1)
@@ -15,11 +15,11 @@
 
 # The GNU fortran compiler (gfortran)
 ifeq ($(DEBUG),1)
-  FC = gfortran
-  FCFLAGS = -O -g -fbounds-check -Wall -Wunused-parameter -ffpe-trap=invalid -fbacktrace -fdump-core -fopenmp
-  LDFLAGS = -fopenmp
+  FC=gfortran
+  FCFLAGS=-O3 -g -fbounds-check -Wall -Wunused-parameter -ffpe-trap=invalid -fbacktrace -fdump-core -fopenmp
+  LDFLAGS=-fopenmp
 else
-  FC = gfortran
-  FCFLAGS = -O -fopenmp
-  LDFLAGS = -fopenmp
+  FC=gfortran
+  FCFLAGS=-O3 -fopenmp
+  LDFLAGS=-fopenmp
 endif
