--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,14 @@
+# NCIPLOT v 3.0
+
+# Compiler settings
+
 include Makefile.inc
+
+# Objects and binaries
 
 BINS=nciplot
 BINS_dbg=nciplot_dbg
-OBJS= param.o tools_io.o tools_math.o reader.o props.o nciplot.o 
+OBJS=param.o tools_io.o tools_math.o reader.o props.o nciplot.o
 LIBS=
 INCLUDE=
 
@@ -19,31 +25,30 @@ INCLUDE=
 
 all: $(BINS)
 
-debug: 
+debug:
 	DEBUG=1 $(MAKE) $(BINS_dbg)
 
 clean:
-	rm -f core *.mod *.o 
-
-veryclean:
 	rm -f core *.mod *.o
 
 mrproper:
-	rm -f core *.mod *.o $(BINS) $(BINS_dbg)
+	rm -rf core *.mod *.o ../bin $(BINS) $(BINS_dbg)
 
 nciplot: $(OBJS) $(LIBS)
 	$(FC) -o nciplot $(LDFLAGS) $(OBJS) $(LIBS)
+	@mkdir -p ../bin; \
+	ln -frs nciplot ../bin/.
 
 nciplot_dbg: $(OBJS) $(LIBS)
 	$(FC) -o nciplot_dbg $(LDFLAGS) $(OBJS) $(LIBS)
+	@mkdir -p ../bin; \
+	ln -frs nciplot_dbg ../bin/.
 
 # Object dependencies
+
 nciplot.o props.o reader.o tools_io.o : param.mod
 nciplot.o props.o reader.o : tools_io.mod
 nciplot.o props.o : reader.mod
 nciplot.o : props.mod
 nciplot.o : tools_math.o
 
-# dummy
-dummy: 
-	@true
